# KineticConstructs

./: .env.example  .gitignore  LICENSE  LICENSE.md  README.md  WORKSHOP.md  WORKSHOP_before_merge.md  langflow-chatbot.yaml  logger.js  package-lock.json  package.json  pyproject.toml  server-pre.js  server.js  server_0.js  server_1.js  server_2.js  server_3.js  server_4.js
.devcontainer/: Dockerfile  README.md  create-container.txt  devcontainer.json  post-create.sh
creation-assets/: base-prompt.txt  check_docs.py  create_astra_collection.py  generate_hero_image.py  generate_images_from_prompts.py  generate_prompts.py  image-prompts.jsonl  llm_update_jsonl_links.py  load_documents_astra.py  load_products_astra.py  products.jsonl  split_products.py  truncate_astra_collections.py
creation-assets/products/constructobots/: documents.jsonl  products.jsonl
creation-assets/products/creatispark/: documents.jsonl  products.jsonl
creation-assets/products/imagiworlds/: documents.jsonl  products.jsonl
creation-assets/products/kinetikits/: documents.jsonl  products.jsonl
flows/: Product Catalog Hybrid Search - server_4.js.json  Product Catalog Hybrid Search.json  Product Recommender.json
public/css/: chatbot-widget-local.css  chatbot-widget.css  new-chatbot-widget.css  style.css
public/js/: chatbot-widget.js  main-navigation.js  product-detail.js  search.js  session.js
views/: home.ejs  product.ejs  products.ejs  search.ejs
views/partials/: chatbot-widget.ejs  footer.ejs  header.ejs  home-main.ejs  product-main.ejs  search-main.ejs
(+2 files in other folders)
