[project]
name = "kineticconstructs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astrapy>=2.0.1",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "langflow >= 1.3.4",
    "numpy>=1.26.4",
    "scikit-learn>=1.6.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
